feat: upgrade to java 17